--- a/front-end/src/app/welcome/welcome.component.html
+++ b/front-end/src/app/welcome/welcome.component.html
@@ -1,11 +1,4 @@
-<div class="container">
-    <!-- <nav class="navbar navbar-light bg-light static-top">
-      <div class="container">
-          <a class="navbar-brand" href="#!">Start Bootstrap</a>
-          <a class="btn btn-primary" href="#signup">Sign Up</a>
-      </div>
-  </nav> -->
-  <!-- Masthead-->
+<!-- <div class="container">
   <header class="masthead">
       <div class="container position-relative">
           <div class="row justify-content-center">
@@ -28,7 +21,7 @@
           </div>
       </div>
   </header>
-  <!-- Icons Grid-->
+
   <section class="features-icons bg-light text-center">
       <div class="container">
           <div class="row">
@@ -117,14 +110,7 @@
           <div class="row justify-content-center">
               <div class="col-xl-6">
                   <h2 class="mb-4">Ready to get started? Sign up now!</h2>
-                  <!-- Signup form-->
-                  <!-- * * * * * * * * * * * * * * *-->
-                  <!-- * * SB Forms Contact Form * *-->
-                  <!-- * * * * * * * * * * * * * * *-->
-                  <!-- This form is pre-integrated with SB Forms.-->
-                  <!-- To make this form functional, sign up at-->
-                  <!-- https://startbootstrap.com/solution/contact-forms-->
-                  <!-- to get an API token!-->
+                
                   <form class="form-subscribe" id="contactFormFooter" data-sb-form-api-token="API_TOKEN">
                       <!-- Email address input-->
                       <div class="row">
@@ -135,10 +121,7 @@
                           </div>
                           <div class="col-auto"><button class="btn btn-primary btn-lg disabled" id="submitButton" type="submit">Submit</button></div>
                       </div>
-                      <!-- Submit success message-->
-                      <!---->
-                      <!-- This is what your users will see when the form-->
-                      <!-- has successfully submitted-->
+
                       <div class="d-none" id="submitSuccessMessage">
                           <div class="text-center mb-3">
                               <div class="fw-bolder">Form submission successful!</div>
@@ -188,14 +171,5 @@
           </div>
       </div>
   </footer>
-  <!-- Bootstrap core JS-->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
-  <!-- Core theme JS-->
-  <script src="js/scripts.js"></script>
-  <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *-->
-  <!-- * *                               SB Forms JS                               * *-->
-  <!-- * * Activate your form at https://startbootstrap.com/solution/contact-forms * *-->
-  <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *-->
-  <script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script>
   </div>
-  
+   -->
